--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -127,7 +127,7 @@
 
 
     <Button
-        android:id="@+id/Button1"
+        android:id="@+id/Button1I"
         android:layout_width="179dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -141,11 +141,12 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:text="Open Website"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="showPopup"/>
 
 
     <Button
-        android:id="@+id/Button2"
+        android:id="@+id/Button2I"
         android:layout_width="179dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -159,10 +160,11 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:text="Call Contact"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="showPopup"/>
 
     <Button
-        android:id="@+id/Button3"
+        android:id="@+id/Button3I"
         android:layout_width="179dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -176,10 +178,11 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:text="Open Youtube"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="showPopup"/>
 
     <Button
-        android:id="@+id/Button4"
+        android:id="@+id/Button4I"
         android:layout_width="179dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -193,7 +196,8 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:text="Open Camera"
-        android:textColor="@color/white" />
+        android:textColor="@color/white"
+        android:onClick="showPopup"/>
 
 
 
